Changed script name

--- a/putavettowork/Views/Shared/_Layout.cshtml
+++ b/putavettowork/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="NationalParks" asp-action="Index">NationalPark</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="JobSearch" asp-action="Index">Job Search</a>
                         </li>
                     </ul>
                 </div>
