--- a/putavettowork/Views/JobSearch/Index.cshtml
+++ b/putavettowork/Views/JobSearch/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="p-4" style="border-radius:20px;">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary">Job Search List</h2>
+            <h2 class="text-primary">Job Search</h2>
         </div>
         <div class="col-6 text-right">
             <a asp-action="Upsert" class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Create New </a>
@@ -14,7 +14,7 @@
             <thead>
                 <tr class="table-danger">
                     <th>Name</th>
-                    <th>State</th>
+                    <th>Location</th>
                     <th></th>
                 </tr>
             </thead>
